# Assignment-3-Image-Generation

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-docker.txt  train_gan.py
app/: bigram_model.py  embeddings.py  gan_model.py  lstm_model.py  main.py
helper_lib/: __init__.py  data_loader.py  diffusion_model.py  diffusion_utils.py  evaluator.py  generator.py  model.py  trainer.py  utils.py
outputs/: gan_mnist.pt
